# SDLGPU_Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asset_copy.cmake  fetch_dependencies.cmake  imgui.ini
Editor/: CMakeLists.txt
Editor/assets/: Info.plist  icon.icns
Editor/src/: editorSettings.cpp  editorSettings.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  sceneEditor.cpp  sceneEditor.hpp  tileMapEditor.cpp  tileMapEditor.hpp
Editor/src/EditorWindows/: editorSettings.cpp  editorSettings.hpp  projectSettings.cpp  projectSettings.hpp  sceneEditor.cpp  sceneEditor.hpp  windowIDs.hpp
Engine/: CMakeLists.txt
Engine/src/Graphics/: camera.cpp  camera.hpp  graphicsContext.cpp  graphicsContext.hpp  offScreenRenderer.cpp  offScreenRenderer.hpp  renderTexture.cpp  renderTexture.hpp
Engine/src/Graphics/Pipelines/: backgroundRenderer.cpp  backgroundRenderer.hpp  lineRenderer.cpp  lineRenderer.hpp  spriteBatch.cpp  spriteBatch.hpp
Engine/src/Graphics/Sprites/: sprite.cpp  sprite.hpp  spriteBatch.cpp  spriteBatch.hpp
Engine/src/Graphics/Structs/: line.cpp  line.hpp  sprite.cpp  sprite.hpp
Engine/src/Graphics/Textures/: texture.cpp  texture.hpp  textureManager.cpp  textureManager.hpp
Engine/src/Graphics/TileMap/: tileMapRenderer.cpp  tileMapRenderer.hpp
Engine/src/Imgui/: imguiHelpers.cpp  imguiHelpers.hpp  imguiTheme.cpp  imguiTheme.hpp
Engine/src/LevelData/: project.cpp  project.hpp
Engine/src/LevelData/Maps/: layer.hpp  scene.hpp  tileLayer.cpp  tileLayer.hpp
Engine/src/Utils/: fileHelpers.cpp  fileHelpers.hpp  logger.cpp  logger.hpp  rect.hpp
Game/: CMakeLists.txt
Game/src/: editor.cpp  editor.hpp  game.cpp  game.hpp  main.cpp
assets/levels/: GdungeonCrawler.ldtk
assets/shaders/compiled/DXIL/: backgroundrenderer.vert.dxil  linerenderer.vert.dxil  offscreen.vert.dxil  spritebatch.vert.dxil  tilemap.vert.dxil
assets/shaders/compiled/MSL/: backgroundrenderer.vert.msl  linerenderer.vert.msl  offscreen.vert.msl  spritebatch.vert.msl  tilemap.vert.msl
assets/shaders/compiled/SPIRV/: backgroundrenderer.vert.spv  linerenderer.vert.spv  offscreen.vert.spv  spritebatch.vert.spv  tilemap.vert.spv
assets/shaders/source/: backgroundrenderer.frag.hlsl  backgroundrenderer.vert.hlsl  compile.sh  linerenderer.frag.hlsl  linerenderer.vert.hlsl  offscreen.vert.hlsl  spritebatch.vert.hlsl  tilemap.vert.hlsl
src/: game.cpp  game.hpp  main.cpp
src/Engine/: editor.cpp  editor.hpp  game.cpp  game.hpp  graphicsContext.cpp  graphicsContext.hpp  logger.cpp  logger.hpp
src/Engine/Graphics/: camera.cpp  camera.hpp  graphicsContext.cpp  graphicsContext.hpp  matricies.cpp  matricies.hpp  offScreenRenderer.cpp  offScreenRenderer.hpp  spriteBatch.cpp  spriteBatch.hpp  textureManager.cpp  textureManager.hpp
src/Engine/Graphics/Sprites/: sprite.cpp  sprite.hpp  spriteBatch.cpp  spriteBatch.hpp
src/Engine/Graphics/Textures/: texture.cpp  texture.hpp  textureManager.cpp  textureManager.hpp
src/Engine/Graphics/TileMap/: tileMapRenderer.cpp  tileMapRenderer.hpp
src/Engine/Scenes/: scene.hpp  sceneManager.cpp  sceneManager.hpp  testScene.cpp  testScene.hpp  tileMapScene.cpp  tileMapScene.hpp
src/Engine/Utils/: logger.cpp  matricies.cpp  matricies.hpp  vectorTypes.cpp  vectorTypes.hpp
